<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SetRecord</class>
 <widget class="QDialog" name="SetRecord">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>486</width>
    <height>246</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>记录</string>
  </property>
  <property name="windowIcon">
   <iconset>
    <normaloff>icon/receipt_long-black-48dp.svg</normaloff>icon/receipt_long-black-48dp.svg</iconset>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="2" column="0" colspan="2">
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="labelIdentity">
       <property name="text">
        <string>身份</string>
       </property>
      </widget>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="labelComment">
       <property name="text">
        <string>备注</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1">
      <widget class="QPlainTextEdit" name="plainTextComment"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="labelSite">
       <property name="text">
        <string>站点</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="labelPassword">
       <property name="text">
        <string>密码</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="lineEditPassword">
       <property name="echoMode">
        <enum>QLineEdit::PasswordEchoOnEdit</enum>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QComboBox" name="comboBoxIdentity"/>
     </item>
     <item row="1" column="1">
      <widget class="QComboBox" name="comboBoxSite"/>
     </item>
    </layout>
   </item>
   <item row="3" column="1">
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>SetRecord</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>398</x>
     <y>152</y>
    </hint>
    <hint type="destinationlabel">
     <x>242</x>
     <y>122</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>SetRecord</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>398</x>
     <y>152</y>
    </hint>
    <hint type="destinationlabel">
     <x>242</x>
     <y>122</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
